--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,9 @@ repositories {
 
 
 dependencies {
-	compile('org.springframework.boot:spring-boot-starter-web')
-	compile('org.codehaus.groovy:groovy')
-	testCompile('org.springframework.boot:spring-boot-starter-test')
+    compile 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	compile 'org.springframework.boot:spring-boot-starter-web'
+	compile 'org.codehaus.groovy:groovy-all'
+
+	testCompile 'org.springframework.boot:spring-boot-starter-test'
 }
